Mejora en la obtencion del archivo para la generacion del prediagnostico
