# swagger.json
@@ -825,12 +825,8 @@
     },
     "/caso": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -931,9 +927,7 @@
             }
           }
         },
-        "tags": [
-          "casos"
-        ],
+        "tags": ["casos"],
         "description": "crear caso",
         "operationId": "crearCaso",
         "summary": "crear caso"
@@ -941,9 +935,7 @@
     },
     "/caso/2": {
       "delete": {
-        "consumes": [
-          "text/plain"
-        ],
+        "consumes": ["text/plain"],
         "parameters": [
           {
             "in": "body",
@@ -976,17 +968,13 @@
             }
           }
         },
-        "tags": [
-          "casos"
-        ],
+        "tags": ["casos"],
         "description": "elimiar provincia por id",
         "operationId": "elimiarProvinciaPorId",
         "summary": "elimiar provincia por id"
       },
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1061,20 +1049,14 @@
             }
           }
         },
-        "tags": [
-          "casos"
-        ],
+        "tags": ["casos"],
         "description": "obtener casos por id",
         "operationId": "obtenerCasosPorId",
         "summary": "obtener casos por id"
       },
       "put": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -1175,9 +1157,7 @@
             }
           }
         },
-        "tags": [
-          "casos"
-        ],
+        "tags": ["casos"],
         "description": "actualizar caso por id",
         "operationId": "actualizarCasoPorId",
         "summary": "actualizar caso por id"
@@ -1185,9 +1165,7 @@
     },
     "/casos": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1279,9 +1257,7 @@
             }
           }
         },
-        "tags": [
-          "casos"
-        ],
+        "tags": ["casos"],
         "description": "obtener todos los casos",
         "operationId": "obtenerTodosLosCasos",
         "summary": "obtener todos los casos"
@@ -1289,9 +1265,7 @@
     },
     "/ciudad": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -1324,9 +1298,7 @@
             "description": ""
           }
         },
-        "tags": [
-          "ciudades"
-        ],
+        "tags": ["ciudades"],
         "description": "crear ciudad",
         "operationId": "crearCiudad",
         "summary": "crear ciudad"
@@ -1334,9 +1306,7 @@
     },
     "/ciudad/4": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1411,9 +1381,7 @@
             }
           }
         },
-        "tags": [
-          "ciudades"
-        ],
+        "tags": ["ciudades"],
         "description": "obtener ciudad por id",
         "operationId": "obtenerCiudadPorId",
         "summary": "obtener ciudad por id"
@@ -1421,9 +1389,7 @@
     },
     "/ciudad/5": {
       "delete": {
-        "consumes": [
-          "text/plain"
-        ],
+        "consumes": ["text/plain"],
         "parameters": [
           {
             "in": "body",
@@ -1456,20 +1422,14 @@
             }
           }
         },
-        "tags": [
-          "ciudades"
-        ],
+        "tags": ["ciudades"],
         "description": "obtener ciudad por id Copy 2",
         "operationId": "obtenerCiudadPorIdCopy2",
         "summary": "obtener ciudad por id Copy 2"
       },
       "put": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -1586,9 +1546,7 @@
             }
           }
         },
-        "tags": [
-          "ciudades"
-        ],
+        "tags": ["ciudades"],
         "description": "actualizar ciudad por id",
         "operationId": "actualizarCiudadPorId",
         "summary": "actualizar ciudad por id"
@@ -1596,9 +1554,7 @@
     },
     "/ciudades": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1703,9 +1659,7 @@
             }
           }
         },
-        "tags": [
-          "ciudades"
-        ],
+        "tags": ["ciudades"],
         "description": "obtener todas las ciudades",
         "operationId": "obtenerTodasLasCiudades",
         "summary": "obtener todas las ciudades"
@@ -1713,12 +1667,8 @@
     },
     "/provincia": {
       "post": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -1807,9 +1757,7 @@
             }
           }
         },
-        "tags": [
-          "provincias"
-        ],
+        "tags": ["provincias"],
         "description": "crear provincias",
         "operationId": "crearProvincias",
         "summary": "crear provincias"
@@ -1817,9 +1765,7 @@
     },
     "/provincia/51": {
       "delete": {
-        "consumes": [
-          "text/plain"
-        ],
+        "consumes": ["text/plain"],
         "parameters": [
           {
             "in": "body",
@@ -1852,17 +1798,13 @@
             }
           }
         },
-        "tags": [
-          "provincias"
-        ],
+        "tags": ["provincias"],
         "description": "elimiar provincia por id",
         "operationId": "elimiarProvinciaPorId1",
         "summary": "elimiar provincia por id"
       },
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -1929,20 +1871,14 @@
             }
           }
         },
-        "tags": [
-          "provincias"
-        ],
+        "tags": ["provincias"],
         "description": "obtener provincia por id",
         "operationId": "obtenerProvinciaPorId",
         "summary": "obtener provincia por id"
       },
       "put": {
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -2039,9 +1975,7 @@
             }
           }
         },
-        "tags": [
-          "provincias"
-        ],
+        "tags": ["provincias"],
         "description": "actualizar ciudad por id",
         "operationId": "actualizarCiudadPorId1",
         "summary": "actualizar ciudad por id"
@@ -2049,9 +1983,7 @@
     },
     "/provincias": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [],
         "responses": {
           "200": {
@@ -2373,9 +2305,7 @@
             }
           }
         },
-        "tags": [
-          "provincias"
-        ],
+        "tags": ["provincias"],
         "description": "obtener todas las provincias",
         "operationId": "obtenerTodasLasProvincias",
         "summary": "obtener todas las provincias"
@@ -2383,9 +2313,7 @@
     },
     "/semaforo": {
       "get": {
-        "produces": [
-          "application/json"
-        ],
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "query",
@@ -2453,13 +2381,90 @@
             }
           }
         },
-        "tags": [
-          "semaforo"
-        ],
+        "tags": ["semaforo"],
         "description": "obtener semaforo por enfermedad",
         "operationId": "obtenerSemaforoPorEnfermedad",
         "summary": "obtener semaforo por enfermedad"
       }
+    },
+    "/prediagnostico": {
+      "post": {
+        "consumes": ["multipart/form-data"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "format": "binary",
+            "in": "formData",
+            "name": "filePath",
+            "type": "string"
+          },
+          {
+            "in": "formData",
+            "name": "nombre",
+            "type": "string"
+          },
+          {
+            "in": "formData",
+            "name": "sintomas",
+            "type": "string"
+          },
+          {
+            "description": "1",
+            "in": "formData",
+            "name": "x",
+            "type": "string"
+          },
+          {
+            "in": "formData",
+            "name": "y",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          },
+          "500": {
+            "description": "500",
+            "headers": {
+              "Access-Control-Allow-Origin": {
+                "type": "string"
+              },
+              "Connection": {
+                "type": "string"
+              },
+              "Content-Length": {
+                "type": "string"
+              },
+              "Date": {
+                "type": "string"
+              },
+              "ETag": {
+                "type": "string"
+              },
+              "Keep-Alive": {
+                "type": "string"
+              },
+              "X-Powered-By": {
+                "type": "string"
+              }
+            },
+            "schema": {
+              "properties": {
+                "error": {
+                  "example": "Error al generar el prediagnóstico",
+                  "type": "string"
+                }
+              },
+              "type": "object"
+            }
+          }
+        },
+        "tags": ["prediagnostico"],
+        "description": "generarPrediagnostico",
+        "operationId": "generarprediagnostico",
+        "summary": "generarPrediagnostico"
+      }
     }
-}
+  }
 }
